# redis-in-action

vote-manager/: CMakeLists.txt  vote.cpp
